@@ -1,0 +1,4 @@
+In the time of the great war, the Bishop of Brightmoon developed a prayer to
+protect the entire army of Brightmoon with the all the standard prayers of 
+protection at once. This prayer also provided enhanced wisdom and focus to
+the troops in battle. 
